--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
   .profile-img { width:60px !important; height:60px !important; }
 
   /* اسم المدير أصغر */
-  .manager-name { font-size:10px !important; margin-top:2px; }
+ /* اسم المدير أصغر جدًا */
+  .manager-name {
+    font-size:9px !important;
+    margin-top:2px;
+  }
 
   /* الخضار أصغر قليلًا لتجنب التداخل */
   .corner-img.veggies { width:120px !important; top:10px !important; left:10px !important; z-index:2 !important; }
