--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     .features { display:flex; justify-content:center; flex-wrap:wrap; gap:25px; margin:30px 0; font-size:18px; }
 
     /* === صور المدير والخضار === */
-    .corner-img.veggies { position:absolute; top:0; left:0; width:260px; z-index:2; }
+    .corner-img.veggies { position:absolute; top:0; bottom:-20px; left:0; width:230px; z-index:0; }
     .profile-wrapper { position:absolute; top:20px; right:20px; width:180px; text-align:center; z-index:4; }
     .profile-img { width:140px; height:140px; border-radius:50%; object-fit:cover; background:#fff; position:relative; z-index:3; }
     .glow-bg { position:absolute; inset:-15px; border-radius:50%; background:radial-gradient(circle,rgba(111,210,111,.5)0%,rgba(111,210,111,.25)45%,rgba(111,210,111,0)75%); filter:blur(12px); z-index:1; }
