--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   .manager-name { font-size:6px !important; margin-top:1.5px; }
 
   /* الخضار أصغر قليلًا لتجنب التداخل */
-  .corner-img.veggies { width:120px !important; top:10px !important; left:10px !important; z-index:2 !important; }
+  .corner-img.veggies { width:120px !important; top:10px !important;bottom:-20px !important; left:0px !important; z-index:0 !important; }
 
   /* النصوص في الهيرو أصغر */
   .subtitle { font-size:12px !important; margin-bottom:6px; }
