--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
   .profile-img { width:40px !important; height:40px !important; 
                
   bottom: 0 !important;          /* ملاصقة تمامًا لأسفل الهيرو */
-  left: 0 !important;            /* تبقى على اليسار */
+  right: 0 !important;            /* تبقى على اليمين */
   top: auto !important;          /* إزالة أي تأثير لـ top */
   z-index: 0 !important;         /* خلف النصوص */}
 }
   /* اسم المدير أصغر */
-  .manager-name { font-size:6px !important; margin-top:1px; }
+  .manager-name { font-size:6px !important; margin-top:1px; bottom: 0.2 !important;}
 
   /* الخضار أصغر قليلًا لتجنب التداخل */
  .corner-img.veggies {
