--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 @media (max-width:768px) {
 
   /* صور المدير أصغر */
-  .profile-wrapper { width:80px !important; top:15px !important; bottom: 0 !important; right:5px !important;}
+  .profile-wrapper { width:80px !important; top:15px !important; right:5px !important; z-index:4 !important; }
   .profile-img { width:40px !important; height:40px !important; 
                
   bottom: 0 !important;          /* ملاصقة تمامًا لأسفل الهيرو */
