--- a/index.html
+++ b/index.html
@@ -71,46 +71,56 @@
     }
 @media (max-width:768px) {
 
-  /* صور المدير أصغر */
-  .profile-wrapper { width:80px !important; top:15px !important; right:5px !important; z-index:4 !important; }
-  .profile-img { width:40px !important; height:40px !important; 
-               
-  bottom: 0 !important;          /* ملاصقة تمامًا لأسفل الهيرو */
-  right: 0 !important;            /* تبقى على اليمين */
-  top: auto !important;          /* إزالة أي تأثير لـ top */
-  z-index: 0 !important;         /* خلف النصوص */}
-}
-  /* اسم المدير أصغر */
-  .manager-name { font-size:6px !important; margin-top:1px; bottom: 0.2 !important;}
+  /* صور المدير وأسمه ملاصقة لأسفل الهيرو */
+  .profile-wrapper { 
+    width:80px !important; 
+    bottom:0 !important;   /* ملاصقة للشريط الأخضر */
+    left:auto !important;
+    right:10px !important;  /* على اليمين */
+    top:auto !important;     /* إزالة top */
+    z-index:2 !important;   /* تحت النصوص فوق الخلفية */
+  }
 
-  /* الخضار أصغر قليلًا لتجنب التداخل */
- .corner-img.veggies {
-  width:100px !important;       /* حجم الصورة صغير لتجنب التداخل */
-  bottom: 0 !important;          /* ملاصقة تمامًا لأسفل الهيرو */
-  left: 0 !important;            /* تبقى على اليسار */
-  top: auto !important;          /* إزالة أي تأثير لـ top */
-  z-index: 0 !important;         /* خلف النصوص */
-}
+  .profile-img { 
+    width:40px !important; 
+    height:40px !important; 
+  }
 
- /* النصوص في الهيرو أصغر ومرفوعة للأعلى */
-.subtitle { 
-  font-size:12px !important; 
-  margin-bottom:4px !important;  /* أقل من السابق لتحريك العنوان الرئيسي للأعلى */
-  margin-top:-5px !important;    /* رفع النص قليلاً نحو الأعلى */
-}
+  .manager-name { 
+    font-size:6px !important; 
+    margin-top:2px !important; 
+    display:block; 
+  }
 
-.title { 
-  font-size:10px !important; 
-  margin-bottom:6px !important;  /* أقل من السابق لتقليل المسافة تحت العنوان */
-  margin-top:-4px !important;    /* رفع النص قليلاً نحو الأعلى */
-}
+  /* الخضار أصغر لتجنب التداخل */
+  .corner-img.veggies {
+    width:100px !important;
+    bottom:0 !important;  /* ملاصقة للشريط الأخضر */
+    left:0 !important;
+    top:auto !important;
+    z-index:1 !important;
+  }
+
+  /* النصوص في الهيرو أصغر ومرفوعة قليلاً */
+  .subtitle { 
+    font-size:12px !important; 
+    margin-bottom:4px !important;  
+    margin-top:-5px !important;    
+  }
+
+  .title { 
+    font-size:10px !important; 
+    margin-bottom:6px !important;  
+    margin-top:-4px !important;    
+  }
 
   /* شريط الإعلان: حجم أصغر وسلس */
   .promo-text { animation: scrollText 30s linear infinite; font-size:14px; }
 
   /* padding للهيرو لتناسب الحجم الجديد */
-  .hero { padding:65px 10px 25px; }
+  .hero { padding:40px 10px 50px; }
 }
+
 
 
   </style>
