--- a/index.html
+++ b/index.html
@@ -84,11 +84,12 @@
   .profile-img { 
     width:40px !important; 
     height:40px !important; 
+    margin:0 !important;       /* إزالة أي margin إضافي */
   }
 
   .manager-name { 
     font-size:6px !important; 
-    margin-top:2px !important; 
+    margin-top:1px !important;  /* تقليل المسافة بين الصورة والاسم */
     display:block; 
   }
 
